--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Sarah King",
+  "author": "Ian Jacobs",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.0",
